--- a/index.html
+++ b/index.html
@@ -10,7 +10,43 @@
 </head>
 
 <body>
-    <h1>Alurabook</h1>
-</body>
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+                </label>
+                 <ul class="lista-menu">
+                 <li class="lista-menu__titulo">Categorias</li>
+                 <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                 </li>
+                 <li class="lista-menu__item">
+                     <a href="#" class="lista-menu__link">Front-end</a>
+                  </li>
+                  <li class="lista-menu__item">
+                      <a href="#" class="lista-menu__link">Infraestrutura</a>
+                  </li>
+                  <li class="lista-menu__item">
+                      <a href="#" class="lista-menu__link">Business</a>
+                  </li>
+                  <li class="lista-menu__item">
+                      <a href="#" class="lista-menu__link">Design & UX</a>
+                 </li>
+                </ul>
+            <img src="img/Logo.svg" class="container__imagem" alt="logo da Alurabooks">
+        </div>
 
-</html>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"></a>
+            <a href="#"><img src="img/Sacola.png"alt="carrinho de compras"></img></a>
+            <a href="#"><img src="img/Usuario.png" alt="meu perfil"></a>
+
+        </div>
+    </header>
+                
+
+<html>
+
+
+
