--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
 
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"></a>
-            <a href="#"><img src="img/Sacola.png"alt="carrinho de compras"></img></a>
-            <a href="#"><img src="img/Usuario.png" alt="meu perfil"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos" class="container__imagem" ></a>
+            <a href="#"><img src="img/Sacola.png"alt="carrinho de compras" class="container__imagem"></a>
+            <a href="#"><img src="img/Usuario.png" alt="meu perfil"class="container__imagem" ></a>
 
         </div>
     </header>
